--- a/GMTKJam/Assembly-CSharp-Editor.csproj
+++ b/GMTKJam/Assembly-CSharp-Editor.csproj
@@ -51,7 +51,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Editor\HexCoordinatesDrawer.cs" />
+     <Compile Include="Assets\Scripts\Editor\HexCoordinatesDrawer.cs" />
+     <None Include="Assets\Materials\VertexColors.shader" />
  <Reference Include="UnityEditor.Advertisements">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
  </Reference>
