--- a/GMTKJam/Assembly-CSharp-Editor.csproj
+++ b/GMTKJam/Assembly-CSharp-Editor.csproj
@@ -52,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Editor\HexCoordinatesDrawer.cs" />
-     <None Include="Assets\Materials\VertexColors.shader" />
+     <None Include="Assets\Shaders\VertexColors.shader" />
  <Reference Include="UnityEditor.Advertisements">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
  </Reference>
