--- a/GMTKJam/Assembly-CSharp-Editor.csproj
+++ b/GMTKJam/Assembly-CSharp-Editor.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Editor\HexCoordinatesDrawer.cs" />
      <None Include="Assets\Shaders\VertexColors.shader" />
+     <None Include="Assets\Shaders\UIText.shader" />
  <Reference Include="UnityEditor.Advertisements">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
  </Reference>
