--- a/GMTKJam/Assembly-CSharp.csproj
+++ b/GMTKJam/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
      <Compile Include="Assets\Scripts\UnitBehaviour.cs" />
      <Compile Include="Assets\Scripts\UnitTypes.cs" />
      <None Include="Assets\Shaders\VertexColors.shader" />
+     <None Include="Assets\Shaders\UIText.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
