--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,8 @@ Temp/
 Library/
 Assets/Models/*
 *.blend.*
-WorkingModels/
+Assets/Music/*
+Assets/Sounds/*
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
