Some miner spawning from outpost.

--- a/GMTKJam/Assembly-CSharp.csproj
+++ b/GMTKJam/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
      <Compile Include="Assets\Scripts\MineHandler.cs" />
      <Compile Include="Assets\Scripts\ObjectInfo.cs" />
      <Compile Include="Assets\Scripts\OutpostHandler.cs" />
+     <Compile Include="Assets\Scripts\OutpostHandlerController.cs" />
      <Compile Include="Assets\Scripts\OverallHexCoordsDict.cs" />
      <Compile Include="Assets\Scripts\PlayerInput.cs" />
      <Compile Include="Assets\Scripts\PoliticsParty.cs" />
